python/PyTEL/utest/ast/parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit
Rule 1     constant_expression_opt -> empty
Rule 2     constant_expression_opt -> constant_expression
Rule 3     expression_opt -> empty
Rule 4     expression_opt -> expression
Rule 5     parameter_list_opt -> empty
Rule 6     parameter_list_opt -> parameter_list
Rule 7     translation_unit -> external_decl_list
Rule 8     translation_unit -> translation_unit external_decl_list
Rule 9     external_decl_list -> external_decl
Rule 10    external_decl_list -> external_decl_list external_decl
Rule 11    external_decl -> external_declaration
Rule 12    external_decl -> declaration_specifiers
Rule 13    external_decl -> function_definition
Rule 14    external_declaration -> pp_directive
Rule 15    pp_directive -> PPHASH
Rule 16    function_definition -> function_type_specifier FUNCTION identifier LPAREN parameter_list_opt RPAREN compound_statement ENDFUNCTION
Rule 17    statement -> labeled_statement
Rule 18    statement -> expression_statement
Rule 19    statement -> selection_statement
Rule 20    statement -> iteration_statement
Rule 21    statement -> jump_statement
Rule 22    declaration_specifiers -> type_qualifier type_specifier init_declarator_list SEMI
Rule 23    declaration_specifiers -> type_specifier init_declarator_list SEMI
Rule 24    declaration_specifiers_list -> declaration_specifiers
Rule 25    declaration_specifiers_list -> declaration_specifiers_list declaration_specifiers
Rule 26    function_type_specifier -> VOID
Rule 27    function_type_specifier -> type_specifier
Rule 28    type_specifier -> INTEGER
Rule 29    type_specifier -> FLOAT
Rule 30    type_specifier -> STRING
Rule 31    type_qualifier -> CONST
Rule 32    init_declarator_list -> init_declarator
Rule 33    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 34    init_declarator -> variable_declarator
Rule 35    init_declarator -> variable_declarator EQUALS initializer
Rule 36    variable_declarator -> identifier LBRACKET constant_expression_opt RBRACKET
Rule 37    variable_declarator -> identifier
Rule 38    parameter_list -> parameter_declaration
Rule 39    parameter_list -> parameter_list COMMA parameter_declaration
Rule 40    parameter_declaration -> type_specifier variable_declarator
Rule 41    parameter_declaration -> type_specifier BAND variable_declarator
Rule 42    initializer -> assignment_expression
Rule 43    initializer -> LBRACE initializer_list RBRACE
Rule 44    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 45    initializer_list -> initializer
Rule 46    initializer_list -> initializer_list COMMA initializer
Rule 47    compound_statement -> statement_list
Rule 48    compound_statement -> declaration_specifiers_list
Rule 49    compound_statement -> declaration_specifiers_list statement_list
Rule 50    statement_list -> statement
Rule 51    statement_list -> statement_list statement
Rule 52    labeled_statement -> ID COLON statement
Rule 53    labeled_statement -> CASE expression COLON statement
Rule 54    labeled_statement -> DEFAULT COLON statement
Rule 55    selection_statement -> IF LPAREN expression RPAREN compound_statement ENDIF
Rule 56    selection_statement -> IF LPAREN expression RPAREN compound_statement ELSE compound_statement ENDIF
Rule 57    selection_statement -> SWITCH LPAREN expression RPAREN compound_statement ENDSWITCH
Rule 58    iteration_statement -> WHILE LPAREN expression RPAREN compound_statement ENDWHILE
Rule 59    iteration_statement -> DO compound_statement WHILE LPAREN expression RPAREN
Rule 60    iteration_statement -> FOR LPAREN expression SEMI expression_opt SEMI expression_opt RPAREN compound_statement ENDFOR
Rule 61    jump_statement -> GOTO ID SEMI
Rule 62    jump_statement -> BREAK SEMI
Rule 63    jump_statement -> CONTINUE SEMI
Rule 64    jump_statement -> RETURN expression SEMI
Rule 65    jump_statement -> RETURN SEMI
Rule 66    expression_statement -> expression SEMI
Rule 67    expression_statement -> SEMI
Rule 68    expression -> assignment_expression
Rule 69    expression -> expression COMMA assignment_expression
Rule 70    assignment_expression -> conditional_expression
Rule 71    assignment_expression -> variable_declarator assignment_operator conditional_expression
Rule 72    assignment_operator -> EQUALS
Rule 73    constant_expression -> conditional_expression
Rule 74    conditional_expression -> binary_expression
Rule 75    binary_expression -> unary_expression
Rule 76    binary_expression -> binary_expression TIMES binary_expression
Rule 77    binary_expression -> binary_expression DIVIDE binary_expression
Rule 78    binary_expression -> binary_expression MOD binary_expression
Rule 79    binary_expression -> binary_expression PLUS binary_expression
Rule 80    binary_expression -> binary_expression MINUS binary_expression
Rule 81    binary_expression -> binary_expression RSHIFT binary_expression
Rule 82    binary_expression -> binary_expression LSHIFT binary_expression
Rule 83    binary_expression -> binary_expression LT binary_expression
Rule 84    binary_expression -> binary_expression LE binary_expression
Rule 85    binary_expression -> binary_expression GE binary_expression
Rule 86    binary_expression -> binary_expression GT binary_expression
Rule 87    binary_expression -> binary_expression EQ binary_expression
Rule 88    binary_expression -> binary_expression NE binary_expression
Rule 89    binary_expression -> binary_expression BAND binary_expression
Rule 90    binary_expression -> binary_expression BOR binary_expression
Rule 91    binary_expression -> binary_expression BXOR binary_expression
Rule 92    binary_expression -> binary_expression AND binary_expression
Rule 93    binary_expression -> binary_expression OR binary_expression
Rule 94    unary_expression -> function_expression
Rule 95    unary_expression -> primary_expression
Rule 96    unary_expression -> PLUSPLUS unary_expression
Rule 97    unary_expression -> MINUSMINUS unary_expression
Rule 98    unary_expression -> unary_operator unary_expression
Rule 99    unary_operator -> PLUS
Rule 100   unary_operator -> MINUS
Rule 101   unary_operator -> NOT
Rule 102   unary_operator -> BNOT
Rule 103   function_expression -> identifier LPAREN argument_expression_list RPAREN
Rule 104   function_expression -> identifier LPAREN RPAREN
Rule 105   primary_expression -> variable_declarator
Rule 106   primary_expression -> constant
Rule 107   primary_expression -> STRING_LITERAL
Rule 108   primary_expression -> LPAREN expression RPAREN
Rule 109   argument_expression_list -> assignment_expression
Rule 110   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 111   identifier -> ID
Rule 112   constant -> INT_CONST_DEC
Rule 113   constant -> INT_CONST_OCT
Rule 114   constant -> INT_CONST_HEX
Rule 115   constant -> FLOAT_CONST
Rule 116   constant -> CHAR_CONST
Rule 117   empty -> <empty>

Terminals, with rules where they appear

AND                  : 92
BAND                 : 41 89
BNOT                 : 102
BOR                  : 90
BREAK                : 62
BXOR                 : 91
CASE                 : 53
CHAR_CONST           : 116
COLON                : 52 53 54
COMMA                : 33 39 44 46 69 110
CONST                : 31
CONTINUE             : 63
DEFAULT              : 54
DIVIDE               : 77
DO                   : 59
ELSE                 : 56
ENDFOR               : 60
ENDFUNCTION          : 16
ENDIF                : 55 56
ENDSWITCH            : 57
ENDWHILE             : 58
EQ                   : 87
EQUALS               : 35 72
FLOAT                : 29
FLOAT_CONST          : 115
FOR                  : 60
FUNCTION             : 16
GE                   : 85
GOTO                 : 61
GT                   : 86
ID                   : 52 61 111
IF                   : 55 56
INTEGER              : 28
INT_CONST_DEC        : 112
INT_CONST_HEX        : 114
INT_CONST_OCT        : 113
LBRACE               : 43 44
LBRACKET             : 36
LE                   : 84
LPAREN               : 16 55 56 57 58 59 60 103 104 108
LSHIFT               : 82
LT                   : 83
MINUS                : 80 100
MINUSMINUS           : 97
MOD                  : 78
NE                   : 88
NOT                  : 101
OR                   : 93
PLUS                 : 79 99
PLUSPLUS             : 96
PPHASH               : 15
RBRACE               : 43 44
RBRACKET             : 36
RETURN               : 64 65
RPAREN               : 16 55 56 57 58 59 60 103 104 108
RSHIFT               : 81
SEMI                 : 22 23 60 60 61 62 63 64 65 66 67
STRING               : 30
STRING_LITERAL       : 107
SWITCH               : 57
TIMES                : 76
VOID                 : 26
WHILE                : 58 59
error                : 

Nonterminals, with rules where they appear

argument_expression_list : 103 110
assignment_expression : 42 68 69 109 110
assignment_operator  : 71
binary_expression    : 74 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93
compound_statement   : 16 55 56 56 57 58 59 60
conditional_expression : 70 71 73
constant             : 106
constant_expression  : 2
constant_expression_opt : 36
declaration_specifiers : 12 24 25
declaration_specifiers_list : 25 48 49
empty                : 1 3 5
expression           : 4 53 55 56 57 58 59 60 64 66 69 108
expression_opt       : 60 60
expression_statement : 18
external_decl        : 9 10
external_decl_list   : 7 8 10
external_declaration : 11
function_definition  : 13
function_expression  : 94
function_type_specifier : 16
identifier           : 16 36 37 103 104
init_declarator      : 32 33
init_declarator_list : 22 23 33
initializer          : 35 45 46
initializer_list     : 43 44 46
iteration_statement  : 20
jump_statement       : 21
labeled_statement    : 17
parameter_declaration : 38 39
parameter_list       : 6 39
parameter_list_opt   : 16
pp_directive         : 14
primary_expression   : 95
selection_statement  : 19
statement            : 50 51 52 53 54
statement_list       : 47 49 51
translation_unit     : 8 0
type_qualifier       : 22
type_specifier       : 22 23 27 40 41
unary_expression     : 75 96 97 98
unary_operator       : 98
variable_declarator  : 34 35 40 41 71 105

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (7) translation_unit -> . external_decl_list
    (8) translation_unit -> . translation_unit external_decl_list
    (9) external_decl_list -> . external_decl
    (10) external_decl_list -> . external_decl_list external_decl
    (11) external_decl -> . external_declaration
    (12) external_decl -> . declaration_specifiers
    (13) external_decl -> . function_definition
    (14) external_declaration -> . pp_directive
    (22) declaration_specifiers -> . type_qualifier type_specifier init_declarator_list SEMI
    (23) declaration_specifiers -> . type_specifier init_declarator_list SEMI
    (16) function_definition -> . function_type_specifier FUNCTION identifier LPAREN parameter_list_opt RPAREN compound_statement ENDFUNCTION
    (15) pp_directive -> . PPHASH
    (31) type_qualifier -> . CONST
    (28) type_specifier -> . INTEGER
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . STRING
    (26) function_type_specifier -> . VOID
    (27) function_type_specifier -> . type_specifier

    PPHASH          shift and go to state 14
    CONST           shift and go to state 2
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 1
    STRING          shift and go to state 11
    VOID            shift and go to state 4

    external_declaration           shift and go to state 6
    function_type_specifier        shift and go to state 7
    function_definition            shift and go to state 13
    type_qualifier                 shift and go to state 15
    external_decl_list             shift and go to state 16
    external_decl                  shift and go to state 12
    type_specifier                 shift and go to state 8
    declaration_specifiers         shift and go to state 3
    pp_directive                   shift and go to state 5
    translation_unit               shift and go to state 10

state 1

    (29) type_specifier -> FLOAT .

    ID              reduce using rule 29 (type_specifier -> FLOAT .)
    FUNCTION        reduce using rule 29 (type_specifier -> FLOAT .)
    BAND            reduce using rule 29 (type_specifier -> FLOAT .)


state 2

    (31) type_qualifier -> CONST .

    INTEGER         reduce using rule 31 (type_qualifier -> CONST .)
    FLOAT           reduce using rule 31 (type_qualifier -> CONST .)
    STRING          reduce using rule 31 (type_qualifier -> CONST .)


state 3

    (12) external_decl -> declaration_specifiers .

    PPHASH          reduce using rule 12 (external_decl -> declaration_specifiers .)
    CONST           reduce using rule 12 (external_decl -> declaration_specifiers .)
    INTEGER         reduce using rule 12 (external_decl -> declaration_specifiers .)
    FLOAT           reduce using rule 12 (external_decl -> declaration_specifiers .)
    STRING          reduce using rule 12 (external_decl -> declaration_specifiers .)
    VOID            reduce using rule 12 (external_decl -> declaration_specifiers .)
    $end            reduce using rule 12 (external_decl -> declaration_specifiers .)


state 4

    (26) function_type_specifier -> VOID .

    FUNCTION        reduce using rule 26 (function_type_specifier -> VOID .)


state 5

    (14) external_declaration -> pp_directive .

    PPHASH          reduce using rule 14 (external_declaration -> pp_directive .)
    CONST           reduce using rule 14 (external_declaration -> pp_directive .)
    INTEGER         reduce using rule 14 (external_declaration -> pp_directive .)
    FLOAT           reduce using rule 14 (external_declaration -> pp_directive .)
    STRING          reduce using rule 14 (external_declaration -> pp_directive .)
    VOID            reduce using rule 14 (external_declaration -> pp_directive .)
    $end            reduce using rule 14 (external_declaration -> pp_directive .)


state 6

    (11) external_decl -> external_declaration .

    PPHASH          reduce using rule 11 (external_decl -> external_declaration .)
    CONST           reduce using rule 11 (external_decl -> external_declaration .)
    INTEGER         reduce using rule 11 (external_decl -> external_declaration .)
    FLOAT           reduce using rule 11 (external_decl -> external_declaration .)
    STRING          reduce using rule 11 (external_decl -> external_declaration .)
    VOID            reduce using rule 11 (external_decl -> external_declaration .)
    $end            reduce using rule 11 (external_decl -> external_declaration .)


state 7

    (16) function_definition -> function_type_specifier . FUNCTION identifier LPAREN parameter_list_opt RPAREN compound_statement ENDFUNCTION

    FUNCTION        shift and go to state 17


state 8

    (23) declaration_specifiers -> type_specifier . init_declarator_list SEMI
    (27) function_type_specifier -> type_specifier .
    (32) init_declarator_list -> . init_declarator
    (33) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (34) init_declarator -> . variable_declarator
    (35) init_declarator -> . variable_declarator EQUALS initializer
    (36) variable_declarator -> . identifier LBRACKET constant_expression_opt RBRACKET
    (37) variable_declarator -> . identifier
    (111) identifier -> . ID

    FUNCTION        reduce using rule 27 (function_type_specifier -> type_specifier .)
    ID              shift and go to state 22

    variable_declarator            shift and go to state 19
    init_declarator                shift and go to state 21
    init_declarator_list           shift and go to state 18
    identifier                     shift and go to state 20

state 9

    (28) type_specifier -> INTEGER .

    ID              reduce using rule 28 (type_specifier -> INTEGER .)
    FUNCTION        reduce using rule 28 (type_specifier -> INTEGER .)
    BAND            reduce using rule 28 (type_specifier -> INTEGER .)


state 10

    (0) S' -> translation_unit .
    (8) translation_unit -> translation_unit . external_decl_list
    (9) external_decl_list -> . external_decl
    (10) external_decl_list -> . external_decl_list external_decl
    (11) external_decl -> . external_declaration
    (12) external_decl -> . declaration_specifiers
    (13) external_decl -> . function_definition
    (14) external_declaration -> . pp_directive
    (22) declaration_specifiers -> . type_qualifier type_specifier init_declarator_list SEMI
    (23) declaration_specifiers -> . type_specifier init_declarator_list SEMI
    (16) function_definition -> . function_type_specifier FUNCTION identifier LPAREN parameter_list_opt RPAREN compound_statement ENDFUNCTION
    (15) pp_directive -> . PPHASH
    (31) type_qualifier -> . CONST
    (28) type_specifier -> . INTEGER
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . STRING
    (26) function_type_specifier -> . VOID
    (27) function_type_specifier -> . type_specifier

    PPHASH          shift and go to state 14
    CONST           shift and go to state 2
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 1
    STRING          shift and go to state 11
    VOID            shift and go to state 4

    external_declaration           shift and go to state 6
    function_type_specifier        shift and go to state 7
    function_definition            shift and go to state 13
    type_qualifier                 shift and go to state 15
    external_decl_list             shift and go to state 23
    external_decl                  shift and go to state 12
    type_specifier                 shift and go to state 8
    declaration_specifiers         shift and go to state 3
    pp_directive                   shift and go to state 5

state 11

    (30) type_specifier -> STRING .

    ID              reduce using rule 30 (type_specifier -> STRING .)
    FUNCTION        reduce using rule 30 (type_specifier -> STRING .)
    BAND            reduce using rule 30 (type_specifier -> STRING .)


state 12

    (9) external_decl_list -> external_decl .

    PPHASH          reduce using rule 9 (external_decl_list -> external_decl .)
    CONST           reduce using rule 9 (external_decl_list -> external_decl .)
    INTEGER         reduce using rule 9 (external_decl_list -> external_decl .)
    FLOAT           reduce using rule 9 (external_decl_list -> external_decl .)
    STRING          reduce using rule 9 (external_decl_list -> external_decl .)
    VOID            reduce using rule 9 (external_decl_list -> external_decl .)
    $end            reduce using rule 9 (external_decl_list -> external_decl .)


state 13

    (13) external_decl -> function_definition .

    PPHASH          reduce using rule 13 (external_decl -> function_definition .)
    CONST           reduce using rule 13 (external_decl -> function_definition .)
    INTEGER         reduce using rule 13 (external_decl -> function_definition .)
    FLOAT           reduce using rule 13 (external_decl -> function_definition .)
    STRING          reduce using rule 13 (external_decl -> function_definition .)
    VOID            reduce using rule 13 (external_decl -> function_definition .)
    $end            reduce using rule 13 (external_decl -> function_definition .)


state 14

    (15) pp_directive -> PPHASH .

    PPHASH          reduce using rule 15 (pp_directive -> PPHASH .)
    CONST           reduce using rule 15 (pp_directive -> PPHASH .)
    INTEGER         reduce using rule 15 (pp_directive -> PPHASH .)
    FLOAT           reduce using rule 15 (pp_directive -> PPHASH .)
    STRING          reduce using rule 15 (pp_directive -> PPHASH .)
    VOID            reduce using rule 15 (pp_directive -> PPHASH .)
    $end            reduce using rule 15 (pp_directive -> PPHASH .)


state 15

    (22) declaration_specifiers -> type_qualifier . type_specifier init_declarator_list SEMI
    (28) type_specifier -> . INTEGER
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . STRING

    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 1
    STRING          shift and go to state 11

    type_specifier                 shift and go to state 24

state 16

    (7) translation_unit -> external_decl_list .
    (10) external_decl_list -> external_decl_list . external_decl
    (11) external_decl -> . external_declaration
    (12) external_decl -> . declaration_specifiers
    (13) external_decl -> . function_definition
    (14) external_declaration -> . pp_directive
    (22) declaration_specifiers -> . type_qualifier type_specifier init_declarator_list SEMI
    (23) declaration_specifiers -> . type_specifier init_declarator_list SEMI
    (16) function_definition -> . function_type_specifier FUNCTION identifier LPAREN parameter_list_opt RPAREN compound_statement ENDFUNCTION
    (15) pp_directive -> . PPHASH
    (31) type_qualifier -> . CONST
    (28) type_specifier -> . INTEGER
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . STRING
    (26) function_type_specifier -> . VOID
    (27) function_type_specifier -> . type_specifier

  ! shift/reduce conflict for PPHASH resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
    $end            reduce using rule 7 (translation_unit -> external_decl_list .)
    PPHASH          shift and go to state 14
    CONST           shift and go to state 2
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 1
    STRING          shift and go to state 11
    VOID            shift and go to state 4

  ! PPHASH          [ reduce using rule 7 (translation_unit -> external_decl_list .) ]
  ! CONST           [ reduce using rule 7 (translation_unit -> external_decl_list .) ]
  ! INTEGER         [ reduce using rule 7 (translation_unit -> external_decl_list .) ]
  ! FLOAT           [ reduce using rule 7 (translation_unit -> external_decl_list .) ]
  ! STRING          [ reduce using rule 7 (translation_unit -> external_decl_list .) ]
  ! VOID            [ reduce using rule 7 (translation_unit -> external_decl_list .) ]

    external_declaration           shift and go to state 6
    function_type_specifier        shift and go to state 7
    function_definition            shift and go to state 13
    type_qualifier                 shift and go to state 15
    external_decl                  shift and go to state 25
    type_specifier                 shift and go to state 8
    declaration_specifiers         shift and go to state 3
    pp_directive                   shift and go to state 5

state 17

    (16) function_definition -> function_type_specifier FUNCTION . identifier LPAREN parameter_list_opt RPAREN compound_statement ENDFUNCTION
    (111) identifier -> . ID

    ID              shift and go to state 22

    identifier                     shift and go to state 26

state 18

    (23) declaration_specifiers -> type_specifier init_declarator_list . SEMI
    (33) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            shift and go to state 28
    COMMA           shift and go to state 27


state 19

    (34) init_declarator -> variable_declarator .
    (35) init_declarator -> variable_declarator . EQUALS initializer

    SEMI            reduce using rule 34 (init_declarator -> variable_declarator .)
    COMMA           reduce using rule 34 (init_declarator -> variable_declarator .)
    EQUALS          shift and go to state 29


state 20

    (36) variable_declarator -> identifier . LBRACKET constant_expression_opt RBRACKET
    (37) variable_declarator -> identifier .

    LBRACKET        shift and go to state 30
    EQUALS          reduce using rule 37 (variable_declarator -> identifier .)
    SEMI            reduce using rule 37 (variable_declarator -> identifier .)
    COMMA           reduce using rule 37 (variable_declarator -> identifier .)
    RPAREN          reduce using rule 37 (variable_declarator -> identifier .)


state 21

    (32) init_declarator_list -> init_declarator .

    SEMI            reduce using rule 32 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 32 (init_declarator_list -> init_declarator .)


state 22

    (111) identifier -> ID .

    LBRACKET        reduce using rule 111 (identifier -> ID .)
    COMMA           reduce using rule 111 (identifier -> ID .)
    RPAREN          reduce using rule 111 (identifier -> ID .)
    LPAREN          reduce using rule 111 (identifier -> ID .)
    TIMES           reduce using rule 111 (identifier -> ID .)
    DIVIDE          reduce using rule 111 (identifier -> ID .)
    MOD             reduce using rule 111 (identifier -> ID .)
    PLUS            reduce using rule 111 (identifier -> ID .)
    MINUS           reduce using rule 111 (identifier -> ID .)
    RSHIFT          reduce using rule 111 (identifier -> ID .)
    LSHIFT          reduce using rule 111 (identifier -> ID .)
    LT              reduce using rule 111 (identifier -> ID .)
    LE              reduce using rule 111 (identifier -> ID .)
    GE              reduce using rule 111 (identifier -> ID .)
    GT              reduce using rule 111 (identifier -> ID .)
    EQ              reduce using rule 111 (identifier -> ID .)
    NE              reduce using rule 111 (identifier -> ID .)
    BAND            reduce using rule 111 (identifier -> ID .)
    BOR             reduce using rule 111 (identifier -> ID .)
    BXOR            reduce using rule 111 (identifier -> ID .)
    AND             reduce using rule 111 (identifier -> ID .)
    OR              reduce using rule 111 (identifier -> ID .)
    SEMI            reduce using rule 111 (identifier -> ID .)
    RBRACKET        reduce using rule 111 (identifier -> ID .)
    RBRACE          reduce using rule 111 (identifier -> ID .)
    COLON           reduce using rule 111 (identifier -> ID .)
    EQUALS          reduce using rule 111 (identifier -> ID .)


state 23

    (8) translation_unit -> translation_unit external_decl_list .
    (10) external_decl_list -> external_decl_list . external_decl
    (11) external_decl -> . external_declaration
    (12) external_decl -> . declaration_specifiers
    (13) external_decl -> . function_definition
    (14) external_declaration -> . pp_directive
    (22) declaration_specifiers -> . type_qualifier type_specifier init_declarator_list SEMI
    (23) declaration_specifiers -> . type_specifier init_declarator_list SEMI
    (16) function_definition -> . function_type_specifier FUNCTION identifier LPAREN parameter_list_opt RPAREN compound_statement ENDFUNCTION
    (15) pp_directive -> . PPHASH
    (31) type_qualifier -> . CONST
    (28) type_specifier -> . INTEGER
    (29) type_specifier -> . FLOAT
    (30) type_specifier -> . STRING
    (26) function_type_specifier -> . VOID
    (27) function_type_specifier -> . type_specifier

  ! shift/reduce conflict for PPHASH resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
    $end            reduce using rule 8 (translation_unit -> translation_unit external_decl_list .)
    PPHASH          shift and go to state 14
    CONST           shift and go to state 2
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 1
    STRING          shift and go to state 11
    VOID            shift and go to state 4

  ! PPHASH          [ reduce using rule 8 (translation_unit -> translation_unit external_decl_list .) ]
  ! CONST           [ reduce using rule 8 (translation_unit -> translation_unit external_decl_list .) ]
  ! INTEGER         [ reduce using rule 8 (translation_unit -> translation_unit external_decl_list .) ]
  ! FLOAT           [ reduce using rule 8 (translation_unit -> translation_unit external_decl_list .) ]
  ! STRING          [ reduce using rule 8 (translation_unit -> translation_unit external_decl_list .) ]
  ! VOID            [ reduce using rule 8 (translation_unit -> translation_unit external_decl_list .) ]

    external_declaration           shift and go to state 6
    function_type_specifier        shift and go to state 7
    function_definition            shift and go to state 13
    type_qualifier                 shift and go to state 15
    external_decl                  shift and go to state 25
    type_specifier                 shift and go to state 8
    declaration_specifiers         shift and go to state 3
    pp_directive                   shift and go to state 5

state 24

    (22) declaration_specifiers -> type_qualifier type_specifier . init_declarator_list SEMI
    (32) init_declarator_list -> . init_declarator
    (33) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (34) init_declarator -> . variable_declarator
    (35) init_declarator -> . variable_declarator EQUALS initializer
    (36) variable_declarator -> . identifier LBRACKET constant_expression_opt RBRACKET
    (37) variable_declarator -> . identifier
    (111) identifier -> . ID

    ID              shift and go to state 22

    identifier                     shift and go to state 20
    variable_declarator            shift and go to state 19
    init_declarator                shift and go to state 21
    init_declarator_list           shift and go to state 31

state 25

    (10) external_decl_list -> external_decl_list external_decl .

    PPHASH          reduce using rule 10 (external_decl_list -> external_decl_list external_decl .)
    CONST           reduce using rule 10 (external_decl_list -> external_decl_list external_decl .)
    INTEGER         reduce using rule 10 (external_decl_list -> external_decl_list external_decl .)
    FLOAT           reduce using rule 10 (external_decl_list -> external_decl_list external_decl .)
    STRING          reduce using rule 10 (external_decl_list -> external_decl_list external_decl .)
    VOID            reduce using rule 10 (external_decl_list -> external_decl_list external_decl .)
    $end            reduce using rule 10 (external_decl_list -> external_decl_list external_decl .)


state 26

    (16) function_definition -> function_type_specifier FUNCTION identifier . LPAREN parameter_list_opt RPAREN compound_statement ENDFUNCTION

    LPAREN          shift and go to state 32


state 27

    (33) init_declarator_list -> init_declarator_list COMMA . init_declarator
    (34) init_declarator -> . variable_declarator
    (35) init_declarator -> . variable_declarator EQUALS initializer
    (36) variable_declarator -> . identifier LBRACKET constant_expression_opt RBRACKET
    (37) variable_declarator -> . identifier
    (111) identifier -> . ID

    ID              shift and go to state 22

    variable_declarator            shift and go to state 19
    init_declarator                shift and go to state 33
    identifier                     shift and go to state 20

state 28

    (23) declaration_specifiers -> type_specifier init_declarator_list SEMI .

    CONST           reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    INTEGER         reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    FLOAT           reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    STRING          reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    ID              reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    CASE            reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    DEFAULT         reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    SEMI            reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    IF              reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    SWITCH          reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    WHILE           reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    DO              reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    FOR             reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    GOTO            reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    BREAK           reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    CONTINUE        reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    RETURN          reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    PLUSPLUS        reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    MINUSMINUS      reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    STRING_LITERAL  reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    LPAREN          reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    PLUS            reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    MINUS           reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    NOT             reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    BNOT            reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    INT_CONST_DEC   reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    INT_CONST_OCT   reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    INT_CONST_HEX   reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    FLOAT_CONST     reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    CHAR_CONST      reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    ENDFOR          reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    ENDIF           reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    PPHASH          reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    VOID            reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    $end            reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    ENDFUNCTION     reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    ENDWHILE        reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    ENDSWITCH       reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)
    ELSE            reduce using rule 23 (declaration_specifiers -> type_specifier init_declarator_list SEMI .)


state 29

    (35) init_declarator -> variable_declarator EQUALS . initializer
    (42) initializer -> . assignment_expression
    (43) initializer -> . LBRACE initializer_list RBRACE
    (44) initializer -> . LBRACE initializer_list COMMA RBRACE
    (70) assignment_expression -> . conditional_expression
    (71) assignment_expression -> . variable_declarator assignment_operator conditional_expression
    (74) conditional_expression -> . binary_expression
    (36) variable_declarator -> . identifier LBRACKET constant_expression_opt RBRACKET
    (37) variable_declarator -> . identifier
    (75) binary_expression -> . unary_expression
    (76) binary_expression -> . binary_expression TIMES binary_expression
    (77) binary_expression -> . binary_expression DIVIDE binary_expression
    (78) binary_expression -> . binary_expression MOD binary_expression
    (79) binary_expression -> . binary_expression PLUS binary_expression
    (80) binary_expression -> . binary_expression MINUS binary_expression
    (81) binary_expression -> . binary_expression RSHIFT binary_expression
    (82) binary_expression -> . binary_expression LSHIFT binary_expression
    (83) binary_expression -> . binary_expression LT binary_expression
    (84) binary_expression -> . binary_expression LE binary_expression
    (85) binary_expression -> . binary_expression GE binary_expression
    (86) binary_expression -> . binary_expression GT binary_expression
    (87) binary_expression -> . binary_expression EQ binary_expression
    (88) binary_expression -> . binary_expression NE binary_expression
    (89) binary_expression -> . binary_expression BAND binary_expression
